setup/receiver/receiver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: correlation-processor
  labels:
    app: corrjoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: corrjoin
  template:
    metadata:
      labels:
        app: corrjoin
    spec:
      containers:
      - name: receiver
        image: localhost:5001/receiver:v0.1
        imagePullPolicy: Always
        command: ["/receiver"]
        args: ["-windowSize", "600", "-stride", "120", "-algorithm", "paa_svd"]
        resources:
           limits:
              cpu: "2"
              memory: "8"
           requests:
              cpu: "2"
              memory: "8Gi"
        ports:
        - containerPort: 9201
          name: api
        - containerPort: 9203
          name: metrics
