setup/receiver/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 8888
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
   name: explorer-route
   namespace: default
spec:
   parentRefs:
   - name: default-gateway
   hostnames:
   - shalmanezer.localhost
   rules:
   - matches:
     - path:
         type: PathPrefix
         value: /explore
   - backendRefs:
     - name: correlation-service
       port: 9205
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
   name: prometheus-route
   namespace: monitoring
spec:
   parentRefs:
   - name: default-gateway
   rules:
   - matches:
     - path:
          type: PathPrefix
          value: /graph
     backendRefs:
     - name: prometheus-svc
       port: 9090
