setup/receiver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corrjoin-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
# host: 'shalmanezer.localhost'
      paths:
      - path: /explore
        pathType: Prefix
        backend:
          service:
            name: correlation-service
            port:
              number: 9205
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - http:
# host: 'shalmanezer.localhost'
      paths:
      - path: /graph
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
               number: 9090
